--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,36 @@
-body {
+/*body {
   font-family: "Open Sans", sans-serif;
   background: url("../img/body.png") no-repeat center center fixed;
   background-size: cover;
+}*/
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+
+
+/* ============= css related to webpage =============== */
+
+header {
+  background-color: #E8E8E8;
+  /*border-bottom: 5px solid grey;*/
+  height: 8vw;
+}
+
+
+main {
+  max-width: 800px;
+  margin: auto;
+  margin-top: 2em;
+  padding: 2em;
+  box-sizing: border-box;
+  background-color: lightgray;
+  border-radius: 25px;
+  background: #E8E8E8;
+  padding: 20px; 
+  width: 800px;
+  height: 1500px;  
 }
 
 /* ============= css related to chats =============== */
@@ -584,7 +613,7 @@ div.content_data::-webkit-scrollbar {
   color: white;
   bottom: 0;
   width: 100%;
-  height: 30%;
+  height: 100%;
   word-wrap: break-word;
   padding: 1px;
 }
