--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,30 +7,160 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    background-color: #F4F4F4;
   }
 
+.hidden {
+  display: none !important;
+}
 
 /* ============= css related to webpage =============== */
 
 header {
-  background-color: #E8E8E8;
   /*border-bottom: 5px solid grey;*/
-  height: 8vw;
+  min-height: 5%;
+  position: relative;
+  display: flex;
+  margin-top: 9em;
 }
 
+.logo {
+  height: 5rem;
+  width: auto;
+}
+
+.title {
+  margin: 1rem auto;
+  font-size: 3rem;
+  text-align: center;
+}
+
+.title__module {
+  display: flex;
+  align-items: center;
+}
+
+.title__author {
+  color: #51D4E5;
+  font-size: 1.5rem;
+}
+
+.container__item {
+  position: relative;
+  height: 15rem;
+  display: flex;
+  align-items: center;
+}
+
+.container__item-icon {
+  height: 100%;
+  position: absolute;
+}
+
+.container__item-icon:nth-child(2n) {
+  right: -20%;
+}
+
+.container__item-text:nth-child(2n) {
+  text-align: right;
+  margin-right: 7rem;
+}
+
+.container__item-icon:nth-child(2n+1) {
+  left: -20%;
+}
+
+.container__item-text:nth-child(2n+1) {
+  text-align: left;
+  margin-left: 7rem;
+}
+
+.container__item-text {
+  display: inline;
+  margin: 0;
+  width: 100%;
+  font-size: 2rem;
+}
+
+@media (max-width: 749px) {
+  header {
+    margin-top: 5em;
+    min-height: 10%;
+  }
+
+  .logo {
+    height: 8rem;
+  }
+
+  .container__item {
+    height: 7rem;
+  }
+
+  .container__item-icon:nth-child(2n) {
+    right: -10%;
+  }
+
+  .container__item-text:nth-child(2n) {
+    margin-right: 2rem;
+  }
+
+  .container__item-icon:nth-child(2n + 1) {
+    left: -10%;
+  }
+
+  .container__item-text:nth-child(2n+1) {
+    margin-left: 2rem;
+  }
+
+  .container__item-text {
+    font-size: 1.7rem;
+  }
+
+  .title {
+    font-size: 2rem;
+    width: 100%;
+  }
+
+  .title__module {
+    flex-direction: column;
+  }
+}
 
 main {
-  max-width: 800px;
+  max-width: 700px;
   margin: auto;
-  margin-top: 2em;
+  margin-top: 5em;
   padding: 2em;
   box-sizing: border-box;
   background-color: lightgray;
   border-radius: 25px;
-  background: #E8E8E8;
+  background: #F4F4F4;
   padding: 20px; 
-  width: 800px;
-  height: 1500px;  
+  width: 90%;
+  min-height: 750px;  
+  margin-bottom: 3em;
+  box-shadow: 20px 20px 20px rgb(255 255 255 / 80%), 
+    -20px -20px 20px rgb(166 180 200 / 70%);
+}
+
+.container__title {
+  text-align: center;
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 2.8rem;
+}
+
+@media (max-width: 749px) {
+  main {
+    margin-top: 5em;
+    min-height: 80vh;
+    box-shadow: 10px 10px 10px rgb(255 255 255 / 80%), 
+    -10px -10px 10px rgb(166 180 200 / 70%);
+  }
+
+  .container__title {
+    font-size: 2.3rem;
+  }
 }
 
 /* ============= css related to chats =============== */
@@ -44,22 +174,25 @@ main {
   position: fixed;
   background: #fff;
   border-radius: 10px 10px 10px 10px;
-  box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 0px 5px 0 #00000096;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0), 0 0px 7px 0 #00000046;
 }
 
 .chat_header {
   height: 60px;
-  background: #060dcfc7;
+  background: #51D4E5;
   border-radius: 10px 10px 0px 0px;
   padding: 5px;
   font-size: 20px;
+  position: relative;
 }
 
 .chat_header_title {
   color: white;
   float: left;
   margin-top: 3%;
-  margin-left: 35%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .chats {
@@ -70,6 +203,7 @@ main {
   overflow-y: scroll;
   margin-top: 1px;
   transition: 0.2s;
+  background: #F4F4F4;
 }
 
 div.chats::-webkit-scrollbar {
@@ -97,7 +231,7 @@ div.chats::-webkit-scrollbar {
 .botMsg {
   float: left;
   margin-top: 5px;
-  background: #e3e7ee;
+  background: #fff;
   color: black;
   /* box-shadow: 2px 3px 9px 0px #9a82842e; */
   margin-left: 0.5em;
@@ -151,7 +285,7 @@ textarea-webkit-scrollbar {
   padding: 10px;
   float: right;
   margin-right: 0.5em;
-  background: #060dcfc7;
+  background: #51D4E5;
   color: white;
   margin-bottom: 0.15em;
   font-size: 13px;
@@ -214,7 +348,7 @@ blockquote {
   padding: 5px;
   font-size: 20px;
   cursor: pointer;
-  color: #060dcfc7;
+  color: #51D4E5;
 }
 
 .imgProfile {
@@ -231,6 +365,16 @@ blockquote {
   bottom: 0;
   right: 0;
   cursor: pointer;
+}
+
+@media (max-width: 749px) {
+  .profile_div {
+    width: 15%;
+  }
+
+  .imgProfile {
+    width: 100%;
+  }
 }
 
 /* css for dropdown menu of the bot */
@@ -424,6 +568,7 @@ div.content_data::-webkit-scrollbar {
 .singleCard {
   padding-left: 10%;
   padding-right: 10px;
+  border-radius: 10px;
 }
 
 /* css for image card */
@@ -466,7 +611,7 @@ div.content_data::-webkit-scrollbar {
 
 .menuChips {
   display: block;
-  background: #060dcfc7;
+  background: #51D4E5;
   color: #fff;
   text-align: center;
   padding: 5px;
@@ -486,10 +631,11 @@ div.content_data::-webkit-scrollbar {
 }
 
 .cards_scroller {
+  scroll-behavior: smooth;
   overflow-x: scroll;
   overflow-y: hidden;
   display: flex;
-  height: 210px;
+  height: 300px;
   width: 300px;
   transition: width 0.5s ease;
   margin-left: 5px;
@@ -498,7 +644,12 @@ div.content_data::-webkit-scrollbar {
 }
 
 .cards_scroller img {
-  border-radius: 10px;
+  border-radius: 20px;
+  filter: blur(1px);
+}
+
+.cards_scroller img::after {
+  content: "";
 }
 
 .cards div.note {
@@ -525,19 +676,18 @@ div.content_data::-webkit-scrollbar {
   background-position: 50% 50%;
   background-repeat: no-repeat;
   z-index: 1;
+  color: #bebebe;
 }
 
 .cards .arrow.next {
   display: none;
   font-size: 2em;
-  color: #ffffff;
-  right: 10px;
+  right: 0;
 }
 
 .cards .arrow.prev {
   display: none;
   font-size: 2em;
-  color: #ffffff;
   left: 10px;
 }
 
@@ -555,9 +705,27 @@ div.content_data::-webkit-scrollbar {
 .cards_scroller div.carousel_cards {
   min-width: 50%;
   min-height: 70%;
-  background: #b5b5b5;
-  border-radius: 10px;
+  background: #F4F4F4;
+  border-radius: 20px;
+  box-shadow: 6px 8px 10px rgb(255 255 255 / 80%), 
+    -6px -8px 10px rgb(166 180 200 / 70%);
+  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-top: 20px;
 }
+
+.cards_scroller div.carousel_cards:last-of-type {
+  margin-right: 40px;
+}
+
+.cards_scroller div.carousel_cards:not(:first-of-type) {
+  margin-left: 30px;
+}
+
+.cards_scroller div.carousel_cards:first-of-type {
+  margin-left: 35px;
+}
+
 
 @-webkit-keyframes fadeInLeft {
   from {
@@ -599,39 +767,40 @@ div.content_data::-webkit-scrollbar {
 
 .cardBackgroundImage {
   width: 100%;
-  border-radius: 5px;
+  border-radius: 20px;
   height: 100%;
   position: absolute;
   object-fit: cover;
 }
 
 .cardFooter {
-  background: rgba(56, 53, 60, 0.86);
-  border-radius: 0px 0px 5px 5px;
+  border-radius: 0px 0px 0px 5px;
+  opacity: 1;
   position: absolute;
   z-index: 3;
   color: white;
-  bottom: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   word-wrap: break-word;
-  padding: 1px;
 }
 
 .cardTitle {
   overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  width: 90%;
-  /* height: 40%; */
+  white-space: pre-wrap;
+  text-align: center;
+  width: 100%;
   display: inline-block;
   margin-bottom: 1px;
   font-size: 15px;
-  /* font-weight: 600; */
   padding: 5px;
-  /* color:#060dcfc7; */
-  color: #ffffff;
+  color:#fff;
   cursor: pointer;
+  background-color: gold;
+  margin: 0;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  font-weight: bold;
 }
 
 .cardDescription {
@@ -639,6 +808,11 @@ div.content_data::-webkit-scrollbar {
   font-size: 13px;
   color: white;
   line-height: 15px;
+}
+
+.cardDescription__item {
+  margin: 5px 0;
+  color: #000;
 }
 
 /*css for dropDown messages*/
@@ -691,8 +865,8 @@ div.content_data::-webkit-scrollbar {
 
 .chip {
   background-color: white;
-  border: 1px solid#060dcfc7;
-  color: #060dcfc7;
+  border: 1px solid#51D4E5;
+  color: #51D4E5;
   font-weight: bolder;
   text-align: center;
 }
