--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 }*/
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", Arial, Helvetica, sans-serif;
     margin: 0;
     background-color: #F4F4F4;
   }
@@ -47,7 +47,7 @@ header {
 
 .container__item {
   position: relative;
-  height: 15rem;
+  min-height: 15rem;
   display: flex;
   align-items: center;
 }
@@ -64,7 +64,7 @@ header {
 .container__item-text:nth-child(2n) {
   text-align: right;
   margin-right: 3rem;
-  margin-left: 240;
+  margin-left: auto;
   font-size: 20;
 }
 
@@ -82,6 +82,7 @@ header {
   margin: 0;
   width: 100%;
   font-size: 2rem;
+  max-width: 50%;
 }
 
 @media (max-width: 749px) {
@@ -95,7 +96,7 @@ header {
   }
 
   .container__item {
-    height: 7rem;
+    min-height: 7rem;
   }
 
   .container__item-icon:nth-child(2n) {
@@ -108,10 +109,12 @@ header {
 
   .container__item-icon:nth-child(2n + 1) {
     left: -10%;
+    max-height: 7rem;
   }
 
   .container__item-text:nth-child(2n+1) {
     margin-left: 2rem;
+    max-height: 7rem;
   }
 
   .container__item-text {
@@ -148,7 +151,6 @@ main {
 .container__title {
   text-align: center;
   font-weight: bold;
-  font-family: sans-serif;
   font-size: 2.8rem;
 }
 
@@ -175,9 +177,14 @@ main {
   bottom: 5%;
   position: fixed;
   background: #fff;
-  border-radius: 10px 10px 10px 10px;
+  border-radius: 12px 12px 10px 10px;
   /*4px 5px 25px rgb(166 180 200 / 70%), -9px -9px 24px rgb(166 180 200 / 70%) */ 
-   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0), 0 0px 7px 0 #00000046;
+  border: 1px solid;
+  border-left-color: #d4d4d4;
+  border-bottom-color: #dfdfdf;
+  border-right-color: #dfdfdf;
+  border-top-color: #51D4E5;
+  box-shadow: 10px 20px 10px rgb(166 180 200 / 70%);
 }
 
 .chat_header {
@@ -248,17 +255,10 @@ div.chats::-webkit-scrollbar {
 }
 
 div.chats > pre {
-  font-family: monospace, monospace;
   font-size: 1em;
   margin: 0 !important;
   /* display: inline !important; */
   white-space: initial !important;
-}
-div.chats > ul:not(.browser-default) {
-  padding-left: 1em;
-}
-div.chats > ul:not(.browser-default) > li {
-  list-style-type: initial;
 }
 
 div.chats > span.botMsg > ol {
@@ -269,11 +269,6 @@ textarea {
   resize: none;
   outline: none;
   overflow: hidden;
-  font-family: Lato;
-}
-
-textarea::-webkit-input-placeholder {
-  font-family: Lato;
 }
 
 textarea-webkit-scrollbar {
@@ -826,7 +821,7 @@ div.content_data::-webkit-scrollbar {
   background: white;
   color: black;
   box-shadow: 2px 3px 9px 0px #9a82842e;
-  margin-left: 0.5em;
+  margin-left: 2.5em;
   padding: 10px;
   border-radius: 1.5em;
   max-width: 60%;
@@ -897,10 +892,23 @@ div.content_data::-webkit-scrollbar {
   border-radius: 10px;
 }
 
+#chat-chart {
+  padding: 0.5rem 1rem;
+}
+
+#modal-chart {
+
+}
+
+#modal1.modal.open {
+  display: flex !important;
+  align-items: center;
+}
+
 .chart-container {
   position: relative;
   margin: auto;
-  height: 25vh;
+  height: auto;
   width: 90%;
   border-radius: 10px 10px 10px 10px;
   margin-left: 5%;
@@ -928,7 +936,11 @@ div.content_data::-webkit-scrollbar {
 
 .collapsible-header {
   font-weight: bold;
-  color: #060dcfc7;
+  color: #51D4E5;
+}
+
+.collapsible-header:hover {
+  text-shadow: 2px 2px #f4f4f4;
 }
 
 ul.collapsible > li:first-child .collapsible-header {
@@ -936,8 +948,12 @@ ul.collapsible > li:first-child .collapsible-header {
 }
 
 ul.collapsible > li:last-child .collapsible-header {
-  color: #060dcfc7;
+  color: #51D4E5;
   border-radius: 0px 0px 20px 20px;
+}
+
+ul.collapsible > li:last-child .collapsible-header:hover {
+  text-shadow: 2px 2px #f4f4f4;
 }
 
 ul.collapsible > li:last-child .collapsible-body {
