--- a/static/css/style.css
+++ b/static/css/style.css
@@ -184,7 +184,7 @@ main {
   border-bottom-color: #dfdfdf;
   border-right-color: #dfdfdf;
   border-top-color: #51D4E5;
-  box-shadow: 10px 20px 10px rgb(166 180 200 / 70%);
+  box-shadow: 9px 9px 10px rgb(166 180 200 / 70%), -4px -4px 14px rgb(166 180 200 / 50%);
 }
 
 .chat_header {
@@ -194,6 +194,7 @@ main {
   padding: 5px;
   font-size: 20px;
   position: relative;
+  box-shadow: 0px 4px 7px rgb(166 180 200 / 70%);
 }
 
 .chat_header_title {
@@ -705,8 +706,7 @@ div.content_data::-webkit-scrollbar {
   min-height: 70%;
   background: #F4F4F4;
   border-radius: 20px;
-  box-shadow: 6px 8px 10px rgb(255 255 255 / 80%), 
-    -6px -8px 10px rgb(166 180 200 / 70%);
+  box-shadow: 2px 3px 9px 0px #9a82847a;
   margin-bottom: 20px;
   margin-left: 10px;
   margin-top: 20px;
