added the AWS connection

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: "Open Sans", Arial, Helvetica, sans-serif;
     margin: 0;
-    background-color: #F4F4F4;
+    background-color: #FFF;
   }
 
 .hidden {
