--- a/static/css/style.css
+++ b/static/css/style.css
@@ -716,7 +716,7 @@ div.content_data::-webkit-scrollbar {
 
 .cards_scroller img {
   border-radius: 20px;
-  filter: blur(1px);
+/*  filter: blur(1px);*/
 }
 
 .cards_scroller img::after {
@@ -1157,3 +1157,57 @@ video:focus {
 .pdf_link a {
   color: #f51b55;
 }
+
+
+
+
+/* css for cards within the cards carousels for the shoes*/
+
+.cardBackgroundImage2 {
+  width: 100%;
+  border-radius: 5px;
+  height: 100%;
+  position: absolute;
+  object-fit: cover;
+}
+
+.cardFooter2 {
+  background: rgba(56, 53, 60, 0.86);
+  border-radius: 0px 0px 19px 19px;
+  position: absolute;
+  z-index: 3;
+  color: white;
+  bottom: 0;
+  width: 100%;
+  height: 20%;
+  word-wrap: break-word;
+  padding: 1px;
+}
+
+.cardTitle2 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 90%;
+  /* height: 40%; */
+  display: inline-block;
+  margin-bottom: 1px;
+  font-size: 15px;
+  /* font-weight: 600; */
+  padding: 5px;
+  /* color:#060dcfc7; */
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.cardDescription2 {
+  padding: 5px;
+  font-size: 13px;
+  color: white;
+  line-height: 15px;
+}
+
+
+
+
+
